[gd_scene load_steps=3 format=3 uid="uid://2jyec7ub4po7"]

[ext_resource type="PackedScene" uid="uid://b78h2t3hvwijs" path="res://Scenes/background.tscn" id="1_hgfe3"]
[ext_resource type="Script" path="res://Scripts/mode_menu.gd" id="1_v88fc"]

[node name="mode_menu" type="Node2D"]
script = ExtResource("1_v88fc")

[node name="background" parent="." instance=ExtResource("1_hgfe3")]

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 142.0
offset_top = 753.0
offset_right = 870.0
offset_bottom = 1361.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Hiragana" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "Hiragana"

[node name="Katakana" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "Katakana"

[node name="Kanji" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "Kanji"

[node name="Button3" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
text = "JLPT N5"

[node name="Back" type="Button" parent="."]
offset_left = 145.0
offset_top = 2020.0
offset_right = 873.0
offset_bottom = 2270.0
theme_override_font_sizes/font_size = 80
text = "Back"

[node name="Button" type="Button" parent="."]
visible = false
offset_left = 109.0
offset_top = 286.0
offset_right = 189.0
offset_bottom = 352.0

[connection signal="pressed" from="MarginContainer/VBoxContainer/Hiragana" to="." method="_on_hiragana_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Katakana" to="." method="_on_katakana_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Kanji" to="." method="_on_kanji_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
